--- a/timer.html
+++ b/timer.html
@@ -2,16 +2,38 @@
 <html>
 <body>
 
-<p>Click "Try it". Wait 3 seconds, and the page will alert "Hello".</p>
+<p>This is a simple timer for breaks when coding.</p>
+<p>A script on this page starts this clock:</p>
 
-<button onclick="setTimeout(myFunction, 3000);">Try it</button>
+<p id="clock"></p>
+<p id="countdown"></p>
+
+<button onclick="setTimeout(myFunction, 3000);">Start Timer</button>
+<button onclick="setTimeout(countDown, 3000);">Start Countdown</button>
 
 <script>
+    var n = 100;
+    setTimeout(countDown,1000);
+    function countDown(){
+        n--;
+        if(n > 0){
+            setTimeout(countDown,1000);
+        }
+        //console.log(n);
+        document.getElementById("countdown").innerHTML = n;
+    }
+
 function myFunction() {
-    alert('Hello');
+    //alert('Hello');
+}
+
+var myVar = setInterval(myTimer, 1000);
+
+function myTimer() {
+    var d = new Date();
+    document.getElementById("clock").innerHTML = d.toLocaleTimeString();
 }
 </script>
 
 </body>
 </html>
-
