--- a/timer.html
+++ b/timer.html
@@ -2,9 +2,6 @@
 <html>
 <body>
 
-<p>This is a simple timer for breaks when coding.</p>
-<p>A script on this page starts this clock:</p>
-
 <p id="clock"></p>
 <p id="countdown"></p>
 
@@ -12,15 +9,16 @@
 <button onclick="setTimeout(countDown, 3000);">Start Countdown</button>
 
 <script>
-    var n = 100;
-    setTimeout(countDown,1000);
-    function countDown(){
-        n--;
-        if(n > 0){
-            setTimeout(countDown,1000);
+    var n = 10; //это счетчик таймера, начальное значение 10
+    function countDown(){ //функция, которая вызывается при нажатии на кнопку "Start Countdown"
+        if(n > 0){  //если счетчик больше нуля
+            setTimeout(countDown,1000); //вызываем рекурсивно себя один раз в секунду
         }
-        //console.log(n);
-        document.getElementById("countdown").innerHTML = n;
+        if (n == 0){ //если счетчик обнулился,
+            alert('stop'); //пишем "stop"
+        }
+        document.getElementById("countdown").innerHTML = n; //пишем текущее значение счетчика
+        n--; //уменьшаем текущее значение счетчика на единицу
     }
 
 function myFunction() {
